# smaug-cmd

./: pyproject.toml  setting.py  smaug_cmd_rc.py
designer/: asset-list.ui  asset_list.ui
plugins/: setup.py
plugins/widgets/: category.py
smaug_cmd/: bootstrap.py  setting.py  smaug_cmd.qrc  smaug_cmd_rc.py
smaug_cmd/adapter/: fs.py  images.py  remote_fs.py  smaug.py
smaug_cmd/designer/: asset_editor.ui  asset_editor_ui.py  asset_list.ui  asset_list_ui.py  asset_widget.ui  asset_widget_ui.py  empty_widget.ui  empty_widget_ui.py
smaug_cmd/domain/: command.py  exceptions.py  folder_class.py  fs.py  logic.py  operators.py  parsing.py  smaug_types.py
smaug_cmd/entry/: smaug.py  smaug_resource.py  to_json.py
smaug_cmd/model/: __init__.py  auth.py  data.py  thread.py
smaug_cmd/resource/: smaug.qrc  smaug_cmd.qrc  smaug_rc.py
smaug_cmd/services/: __init__.py  auth.py  logic.py  remote_fs.py
smaug_cmd/ui/: __init__.py  asset_editor.py  asset_table_view.py  asset_widget.py  assets.py  base.py  category_widgets.py  empty_widget.py  file_util.py  folder_pricker.py  folder_widget.py  image.py  layout.py  list_widget.py  login_dialog.py  progress_delegate.py  tags.py  uploader_model.py  uploader_widget.py
tests/: test_asset_list.py  test_asset_widget.py  test_category_ui.py  test_image_widget.py  test_md_parsing  test_md_parsing.py  test_md_parsing2.py  test_resource.py  test_to_json.py  test_trpc_api.py  test_ui.py  test_ui_asset_editor.py  test_utils.py
tests/intergration/: test_data.py  test_folder_class.py  test_logic_asset.py  test_minio.py  (+1 more)
(+39 files in other folders)
