[tool.poetry]
name = "smaug-cmd"
version = "0.1.0"
description = "smaug command-line tools"
authors = ["Noflame Lin <linjuang@gmail.com>"]
readme = "README.md"
packages = [{include = "smaug_cmd"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
usd-core = "^23.8"
click = "^8.1.7"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
pytest = "^7.4.0"
pytest-dotenv = "^0.5.2"

[tool.ruff]
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"