[tool.poetry]
name = "smaug-cmd"
version = "0.1.0"
description = "smaug command-line tools"
authors = ["Noflame Lin <linjuang@gmail.com>"]
readme = "README.md"
packages = [{include = "smaug_cmd"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
usd-core = "^23.8"
click = "^8.1.7"
requests = "^2.31.0"
pyside6 = "^6.5.2"
qtmodern = "^0.2.0"
minio = "^7.1.17"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
pytest = "^7.4.0"
pytest-dotenv = "^0.5.2"

[tool.ruff]
preview = true
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"*_ui.py" = ["F401", "E266"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"